# javaparser-to-hs

./: .gitignore  .gitmodules  README.MD  javaparser-to-hs-stack.cabal  project.config  stack.yaml
app/: Test.hs
java/resources/: simplelogger.properties
java/src/: JavaparserToHS.java  ToDeriveReadVisitor.java
