name:                javaparser-to-hs-stack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/javaparser-to-hs-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable javaparser-to-hs-exe
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , javaparser-to-hs-stack
                     , bytestring
                     , directory-tree
                     , filepath
                     , language-java == 0.2.8.1
                     , process
                     , temporary
  default-language:    Haskell2010

-- test-suite javaparser-to-hs-stack-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , javaparser-to-hs-stack
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jkoppel/javaparser-to-hs-stack
